Fix Header overlapping page content

--- a/src/app/components/Header/header.module.scss
+++ b/src/app/components/Header/header.module.scss
@@ -10,7 +10,7 @@
     top: 0;
     z-index: 200;
     width: 100vw;
-    height: 6rem;
+    height: 0;
 
     @include flex(row, center, space-between);
 }
